--- a/gs.css
+++ b/gs.css
@@ -96,3 +96,24 @@ tr:nth-child(even)
 .both:hover {
     text-shadow: 1px 4px 2px rgb(248, 6, 6);
 }
+i{
+    color:chartreuse
+}
+ul.navbar-horizontal{
+    margin: 35;
+    list-style-type: none;
+}
+ul.navbar-horizontal li{
+    float: left;
+    background-color: blue;
+}
+ul.navbar-horizontal a:hover{
+    background-color: red;
+
+}
+ul.navbar-horizontal a{
+    display: block;
+    padding: 1px;
+    color: aliceblue;
+    
+}
